--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             <small>Error</small>
                         </div>
                         <div class="formControl">
-                            <input id="subBtn" type="submit" name="submit" value="send">
+                            <button id="subBtn" type="submit" name="submit"></button>
                         </div>
                     </form>
                 </section>
