Revert "Update index.html"
This reverts commit 8631c240e122745084017eac5cc23fb1d6acf48b.

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             <small>Error</small>
                         </div>
                         <div class="formControl">
-                            <button id="subBtn" type="submit" name="submit">Send</button>
+                            <button id="subBtn" type="submit" name="submit"></button>
                         </div>
                     </form>
                 </section>
