--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         </div>  
                         <div class="thumbnail thumbWebsites">
                             <img class="thumbImg" src="assets/takeawayThumb.jpg">
-                            <button><a href="takeaway/index.html">View Page</a></button>
+                            <button><a href="TakeawayProject/index.html">View Page</a></button>
              
                         </div>  
                     </div>
