2 projects linked to portfolio
the first 2 projects have been linked to port

--- a/TakeawayProject/index.html
+++ b/TakeawayProject/index.html
@@ -77,8 +77,8 @@
                     <div>
                         <div class="sectionItem">
                             <div class="ItemDescript">
-                            <h1>Spicy Italian</h1>
-                            <p>dkasndsadaapsddisapisd</p>
+                            <h1>PRIMAVERA FOREVER</h1>
+                            <p>A creamy white base topped with chicken breast, balsamic red onions, red pepper pearls</p>
                             </div>
                             <div class="itemAdd">
                                 <img src="assets/plusIcon.png" alt="add item" style="width: 30px;">
@@ -86,8 +86,8 @@
                         </div>
                         <div class="sectionItem">
                             <div class="ItemDescript">
-                            <h1>Mex Chicken</h1>
-                            <p>dkasndsadaapsddisapisd</p>
+                            <h1>SUPER GREEN</h1>
+                            <p>A pea puree base topped with rocket, asparagus, peas, red pepper pearls, spinach</p>
                             </div>
                             <div class="itemAdd">
                                 <img src="assets/plusIcon.png" alt="add item" style="width: 30px;">
@@ -95,8 +95,8 @@
                         </div>
                         <div class="sectionItem">
                             <div class="ItemDescript">
-                            <h1>Double Cheese</h1>
-                            <p>dkasndsadaapsddisapisd</p>
+                            <h1>POLLO PICCANTE CON PANCETTA</h1>
+                            <p>Seasoned chicken breast, pancetta, roasted peppers, red chillies, mushrooms</p>
                             </div>
                             <div class="itemAdd">
                                 <img src="assets/plusIcon.png" alt="add item" style="width: 30px;">
@@ -119,8 +119,8 @@
                     <div>
                         <div class="sectionItem">
                             <div class="ItemDescript">
-                            <h1>assjbdsbk</h1>
-                            <p>dkasndsadaapsddisapisd</p>
+                            <h1>KING PRAWN & CRAYFISH</h1>
+                            <p>Succulent king prawns and crayfish in a creamy seafood and tomato sauce with a hint of chilli</p>
                             </div>
                             <div class="itemAdd">
                                 <p>PlUIS+</p>
@@ -229,19 +229,19 @@
                 <img src="assets/noProfilePink.png" alt="">
                 
                 <h3>Sam</h3>
-                <p>"amaxing dfnsn fdsnbsdjf  sdfjb f jsdb  fdsjbf skfbs fsd hsfdjb fdsj bsdfk"</p>
+                <p>"Very beautiful restaurant with really delicious food. We had the chicken with mashed potatoes and vegetables."</p>
                 <small>*****</small>
             </div>
             <div class="testimonialWrap">
                 <img src="assets/profile2.jfif">
                 <h3>Richard</h3>
-                <p>"skfbs fsd hsfdjb fdsj bsdfk sdfjb f jsdb  fdsjbf"</p>
+                <p>" If you’re looking for a warm, cozy, yet fancy night out, give it a try. I think you’re gonna like it."</p>
                 <small>*****</small>
             </div>
             <div class="testimonialWrap">
                 <img src="assets/profile3.jfif">
                 <h3>Joe</h3>
-                <p>"sdfjb f jsdb  fdsjbf skfbsamaxing  fdsj bsdfk"</p>
+                <p>"Gorgeous restaurant, incredible food."</p>
                 <small>*****</small>
             </div>
         </div>
@@ -254,7 +254,7 @@
     
     <footer>
         <div>
-            <h3><a href="#">back to Portfolio</a></h2>
+            <h3><a href="https://ajcoldi.github.io/">Back to Portfolio</a></h3>
         </div>
         <p>Copyright 2020 BELLO ITALIANO Hull. Website by <a href="#">AJColdi</a></p>
         <ul>
