--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         </div>
                         <div class="thumbnail thumbWebsites">
                             <img class="thumbImg" src="assets/adventureThumb.jpg">
-                            <button><a href="holiday/index.html">View Page</a></button>
+                            <button><a href="HolidayProject/index.html">View Page</a></button>
                    
                         </div>  
                         <div class="thumbnail thumbWebsites">
