--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
                             <img class="thumbImg" src="assets/takeawayThumb.jpg">
                             <button class="thumbnailBtn"><a href="TakeawayProject/index.html">View Page</a></button>
                         </div>  
+                        <div class="thumbnail designs">
+                            <img id="apple" class="thumbImg" src="assets/ipodDesign.jpg">
+                            <p>Apple graphic</p>
+                            
+                        </div>  
                         <div class="thumbnail art">
                             <img class="thumbImg" src="assets/art2.jpg">
                             <p>Game Concept</p>
